# blueredpill

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/linux/: LinuxBlueRedPill.cpp  LinuxBlueRedPill.h  main.cpp
src/linux/safedetect/linux-vm-detector-safe/: CMakeLists.txt  LinuxSafeVMDetector.cpp  LinuxSafeVMDetector.h  main_safe.cpp
src/windows/: WindowsMASM64VmwarePortDetector.asm  WindowsVMDetector.cpp  WindowsVMDetector.h  windowsmain.cpp
